# lerobot-lint

./: .gitignore  LICENSE  PROGRESS.md  README.md  pyproject.toml
lerobot_lint/: __init__.py  _guard.py  cli.py  config.py  engine.py  loader.py  types.py  units.py
lerobot_lint/checks/: base.py  consistency.py  hygiene.py  kinematic.py  timing.py  video.py
lerobot_lint/profiles/: default.yaml  koch.yaml  so101.yaml
lerobot_lint/report/: console.py  finding_summary.py  json_report.py
tests/: test__guard.py  test_cli_exit_code.py  test_config.py  test_conformance.py  test_console_report.py  test_engine.py  test_engine_units.py  test_finding_summary.py  test_json_report.py  test_loader.py  test_public_api.py  test_types.py  test_types_finding.py  test_units.py
tests/checks/: test_base.py  test_consistency.py  test_hygiene.py  test_kinematic.py  test_timing.py  test_video.py
tests/cli/: test_cli.py
