[project]
name = "lerobot-lint"
version = "0.1.0"
description = "Deterministic, rule-based checks that catch behavioral/kinematic data bugs in LeRobot robot-training datasets before you burn GPU-hours training on bad data."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "lerobot[dataset]",
    "numpy",
    "typer",
    "rich",
    "pyyaml",
    "av",
]

[project.scripts]
lelint = "lerobot_lint.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lerobot_lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
